color contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -105,7 +105,7 @@ p {
   top: 60%;
   left: 20px;
   right: 20px;
-  background-color: #748CAB;
+  background-color: #032045;
   color: white;
   padding: 1rem;
   border-radius: 10px;
